# blitz

./: .gitignore  CMakeLists.txt  LICENCE.md  README.md  cmake-variants.yaml  travis.yml
alpha/: CMakeLists.txt
alpha/cmake/: Config.cmake.in  alpha_main.pc.in  util.cmake
alpha/include/: alpha.h
alpha/include/alpha/: alpha.h  alpha.hpp  atypes.h
alpha/include/alpha/core/: alpha_alg.h  alpha_asio.h  alpha_data.h  alpha_gnr.h  alpha_mt.h  alpha_stl.h  alpha_stl.hpp  arch.h  base.h  base.hpp  bstructs.h  bstructs.hpp  concurrent.h  concurrent.hpp  controls.h  controls.hpp  files.h  files.hpp  generic.h  generic.hpp  groups.h  groups.hpp  netsys.h  netsys.hpp  policy.h  policy.hpp  stream.h  stream.hpp
alpha/include/alpha/util/: alpha_posix.h  alpha_posix.hpp  constants.h  db.h  netconfig.h  netconfig.hpp  units.h
alpha/include/at/: atx.h
alpha/include/core/: alpha_cv.h  alpha_stl.h  base.h  bstructs.h  concurrent.h  controls.h  files.h  generic.h  groups.h  netsys.h  policy.h  streaml.h
alpha/include/engine/: matrix.h  sentry.h
alpha/include/util/: alpha_posix.h  date.h  exceptional.h  netconfig.h  p_structs.h  user.h  wrapper.h
alpha/res/: input_file
alpha/samples/: tick.cc
alpha/src/: alpha-main.cc  alpha.cc  alpha_posix.c  atx.cc  core.cc  cv_samp.txt  engine.cc  main.cc  util.cc
alpha/test/: alpha-tests.cc  alpha_base_test.cc  alpha_controls_test.cc  alpha_generic_test.cc  alpha_mt_tests.cc  alpha_poltest.cc  alpha_test_utils.py  tests.cc
blitz/: CMakeLists.txt
blitz-alpha/: CMakeLists.txt
blitz-alpha/cmake/: util.cmake
blitz-alpha/include/: alpha.h
blitz-alpha/include/core/: alpha_stl.h  base.h  concurrent.h  generic.h  groups.h  policy.h  streaml.h
blitz-alpha/include/util/: date.h  exceptional.h  stable.h  user.h  wrapper.h
blitz-engine/: CMakeLists.txt
blitz-engine/cmake/: Config.cmake.in
blitz-engine/include/: sentry.h  vector.h
blitz-engine/src/: main.cc
blitz/include/: blitz-std.hpp  blitz.hpp
blitz/include/at/: atx_db.h
blitz/include/blitz/: blitz.hpp
blitz/include/blitz/core/: algorithm.hpp  arch.hpp  asio.hpp  concurrent.hpp  data.hpp  generic.hpp  stl.hpp
blitz/include/blitz/e64gl/: e64gl.hpp  shader.hpp  util.hpp  window.hpp
blitz/include/blitz/e64gl/glad/: glad.h
blitz/include/blitz/engine/: engine_cv.h
blitz/include/blitz/vkgp/: vkgp.hpp
blitz/include/core/: algorithm.hpp  arch.hpp  asio.hpp  concurrent.hpp  data.hpp  generic.hpp  stl.hpp
blitz/include/internals/: core_internals.hpp
blitz/include/math/: mat.hpp  vector.hpp
blitz/include/vision/: vision.hpp
blitz/src/: atx-main.cc  core-main.cc  core.cc  e64gl.cc  glad.c  math.cc  util.cc  vision.cc  vkgp.cc
blitz/test/: alpha-tests.cc  alpha_controls_test.cc  alpha_poltest.cc  response.txt
cmake/: Config.cmake.in  alpha.pc.in  blitz.pc.in  libalpha_libla.in  libblitz_lib.la.in  util.cmake
engine/: CMakeLists.txt
engine-8.0/: CMakeLists.txt
engine-8.0/cmake/: engine-8.0.pc.in  engine-8.0_main.pc.in  libengine-8.0_libla.in  util.cmake
engine-8.0/include/engine/: engine.h
engine-8.0/include/engine/engine-core/: matrix.h  vector.h
engine-8.0/include/engine/engine-cv/: cvlibtest.h  detect.h
engine-8.0/include/engine/engine_cv/: detect.h  engine_cv.h
engine-8.0/res/: log.txt
engine-8.0/samples/: detect.cc  sample1.cc  sample_image.h
engine-8.0/src/: engine-main.cc  engine.cc  engine_cv.cc
engine/include/: engine.h
engine/include/engine-cv/: cvlibtest.h  detect.h
engine/src/: detect.cc  engine.cc
lib/: libalpha.so.1.0.1  libcored.so.1.1.0
note/: board.ipynb
samples/: CMakeLists.txt  asio-client.cc  asio-client.h  asio-server.cc  asio-server.h
scripts/: load.py
test/: CMakeLists.txt  alpha_test.cc  blitz-math.cc  blitz_all.cc  blitz_core.cc  blitz_test.cc
